<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.esciencecenter.e3dchem.gpcrdb.parent</groupId>
	<artifactId>nl.esciencecenter.e3dchem.gpcrdb.parent</artifactId>
	<version>1.4.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<organization>
		<name>Netherlands eScience Center</name>
		<url>https://www.esciencecenter.nl</url>
	</organization>

	<!-- http://maven.apache.org/scm/git.html -->
	<scm>
		<url>https://github.com/3D-e-Chem/knime-gpcrdb/</url>
		<connection>scm:git:https://github.com/3D-e-Chem/knime-gpcrdb.git</connection>
		<developerConnection>scm:git:https://github.com/3D-e-Chem/knime-gpcrdb.git</developerConnection>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/3D-e-Chem/knime-gpcrdb/issues</url>
	</issueManagement>

	<ciManagement>
		<system>GitHub actions</system>
		<url>https://github.com/3D-e-Chem/knime-gpcrdb/actions</url>
	</ciManagement>

	<modules>
		<module>plugin</module>
		<module>tests</module>
		<module>feature</module>
		<module>p2</module>
		<module>targetplatform</module>
	</modules>

	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<properties>
		<tycho.version>2.7.5</tycho.version>
		<tycho.extras.version>${tycho.version}</tycho.extras.version>
		<tycho.test.jvmArgs>-Xmx512m</tycho.test.jvmArgs>
		<jacoco.version>0.8.10</jacoco.version>
		<java.version>17</java.version>
		<maven.compiler.version>3.10.1</maven.compiler.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <knime.version>5.1</knime.version>
		<target.file>KNIME-AP-${knime.version}</target.file>
		<tycho.scmUrl>scm:git:https://github.com/3D-e-Chem/knime-gpcrdb.git</tycho.scmUrl>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<sonar.organization>3d-e-chem</sonar.organization>
		<!-- following required if running mvn from JDK17 -->
		<knime.ini.testArgs>--add-opens=java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED
            --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
            --add-opens=java.base/sun.security.util=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.net=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.nio.channels=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.base/sun.nio=ALL-UNNAMED
            --add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
            --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
            -Dmisc.io.testing=true</knime.ini.testArgs>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
					<environments>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
                    <target>
						<artifact>
							<groupId>nl.esciencecenter.e3dchem.gpcrdb</groupId>
							<artifactId>nl.esciencecenter.e3dchem.gpcrdb.targetplatform</artifactId>
							<version>${project.version}</version>
							<classifier>${target.file}</classifier>
						</artifact>
					</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-versions-plugin</artifactId>
				<version>${tycho.version}</version>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho.version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho.extras</groupId>
				<artifactId>tycho-pack200a-plugin</artifactId>
				<version>${tycho.extras.version}</version>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-packaging-plugin</artifactId>
					<version>${tycho.version}</version>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.tycho.extras</groupId>
							<artifactId>tycho-buildtimestamp-jgit</artifactId>
							<version>${tycho.extras.version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.tycho.extras</groupId>
							<artifactId>tycho-sourceref-jgit</artifactId>
							<version>${tycho.extras.version}</version>
						</dependency>
					</dependencies>
					<configuration>
						<timestampProvider>jgit</timestampProvider>
						<sourceReferences>
							<generate>true</generate>
						</sourceReferences>
						<format>'v'yyyyMMddHHmm</format>
						<!-- Uncomment to package with uncommited code-->
						<!-- <jgit.dirtyWorkingTree>warning</jgit.dirtyWorkingTree> -->
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<tycho.test.platformArgs>-XstartOnFirstThread</tycho.test.platformArgs>
			</properties>
		</profile>
	</profiles>
</project>
